Mon Oct 28 07:47:32 2013  Aman Gupta <ruby@tmm1.net>

	* vm_backtrace.c (rb_profile_frame_classpath): do not use rb_inspect
	  directly, since it might have a custom implementation or show ivars.

Mon Oct 28 04:10:41 2013  Aman Gupta <ruby@tmm1.net>

	* vm_backtrace.c (rb_profile_frame_classpath): handle singleton
	  methods defined directly on an object.
	* test/-ext-/debug/test_profile_frames.rb: test for above.

Mon Oct 28 00:52:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (new_struct): fix warning message, class name and encoding.

Sun Oct 27 20:53:08 2013  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c: Include ruby/thread.h for
	  rb_thread_call_without_gvl2.
	  (readline_rl_instream, readline_rl_outstream): Record FILE
	  structures allocated by this extension.
	  (getc_body): New function extracted from readline_getc.
	  (getc_func): New function.
	  (readline_getc): Use rb_thread_call_without_gvl2 to invoke getc_func.
	  [ruby-dev:47033] [Bug #8749]
	  (clear_rl_instream, clear_rl_outstream): Close FILE structure
	  allocated by this extention reliably.  [ruby-core:57951] [Bug #9040]
	  (readline_readline): Use clear_rl_instream and clear_rl_outstream.
	  (readline_s_set_input): Set readline_rl_instream.
	  (readline_s_set_output): Set readline_rl_outstream.
	  (Init_readline): Don't call readline_s_set_input because
	  readline_getc doesn't block other threads for any FILE structure now.

	  [ruby-dev:47033] [Bug #8749] reported by Nobuhiro IMAI.
	  [ruby-core:57951] [Bug #9040] reporeted by Eamonn Webster.

Sat Oct 26 19:31:28 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gc.c: catch up recent changes to compile on GC_DEBUG,
	  RGENGC_CHECK_MODE.

Sat Oct 26 19:08:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_initialize_copy): disallow to modify after
	  initialized.

Sat Oct 26 17:48:54 2013  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (meta_add_field): : Re-implemented.